--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <title>Meaning of life</title>
   </head>
   <body>
-        <h1>What is the meaning of life according to you?</h1>
-        <h2>I built this website because i want to read your answers!</h2>
-        <h3>Dont be nervous and just tell me why you are living?</h3>
-        <p>Your answer:</p>
-        <input type="text" name="Your Answer" value="">
+        <div class="container">
+    <h1>What is the meaning of life?</h1>
+    <form target="_blank" action="https://formsubmit.co/salihabdullah2000@gmail.com" method="POST">
+        <div class="form-group">
+            <div class="form-row">
+                <div class="col">
+                    <input type="text" name="name" class="form-control" placeholder="Name" required>
+                </div>
+                <div class="col">
+                    <input type="email" name="email" class="form-control" placeholder="Email Address" required>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <textarea placeholder="Your Thought" class="form-control" name="message" rows="10" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-lg btn-dark btn-block">Send!</button>
+    </form>
+</div>
   </body>
 </html>
