--- a/index.html
+++ b/index.html
@@ -1,28 +1,62 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
+<!doctype html>
+<html lang="en">
+<head>
     <meta charset="utf-8">
-    <title>Meaning of life</title>
-  </head>
-  <body>
-        <div class="container">
-    <h1>What is the meaning of life?</h1>
-    <form target="_blank" action="https://formsubmit.co/salihabdullah2000@gmail.com" method="POST">
-        <div class="form-group">
-            <div class="form-row">
-                <div class="col">
-                    <input type="text" name="name" class="form-control" placeholder="Name" required>
-                </div>
-                <div class="col">
-                    <input type="email" name="email" class="form-control" placeholder="Email Address" required>
-                </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <textarea placeholder="Your Thought" class="form-control" name="message" rows="10" required></textarea>
-        </div>
-        <button type="submit" class="btn btn-lg btn-dark btn-block">Send!</button>
-    </form>
-</div>
-  </body>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="contact form example">
+  <title>Contact Us</title>
+</head>
+
+<body>
+  <h2 class="content-head">What do you think about meaning of life? I want to know your thought</h2>
+
+
+<!-- START HERE -->
+   <link rel="stylesheet" href="pure.css">
+   <link rel="stylesheet" href="style.css">
+
+
+  <form class="gform pure-form pure-form-stacked" method="POST" data-email="example@email.net"
+  action="
+https://script.google.com/macros/s/AKfycbzqJQVmvJQLpP3h3ZUcGcrq3XbwzGvKVm1Kx_JkH5IVaCKxHf0b_E7RHA/exec">
+    <!-- change the form action to your script url -->
+
+    <div class="form-elements">
+      <fieldset class="pure-group">
+        <label for="name">Name: </label>
+        <input id="name" name="name" placeholder="Could be your nick name or real" />
+      </fieldset>
+
+      <fieldset class="pure-group">
+        <label for="message">Message: </label>
+        <textarea id="message" name="message" rows="10"
+        placeholder="Tell me what's on your mind, this is not for profit or something like that. I am trying to figure out the answer"></textarea>
+      </fieldset>
+
+      <fieldset class="pure-group">
+        <label for="email"><em>Your</em> Email Address:</label>
+        <input id="email" name="email" type="email" value=""
+        required placeholder="your.name@email.com"/>
+        <span class="email-invalid" style="display:none">
+          Must be a valid email address</span>
+      </fieldset>
+
+
+      <button >
+        Send</button>
+    </div>
+
+    <!-- Customise the Thankyou Message People See when they submit the form: -->
+    <div class="thankyou_message" style="display:none;">
+      <h2><em>Thank You</em> I have a surprise for you! I'll send a random song that i like to listen from my playlist (It could take some time because i will send it manuel)  </h2>
+    </div>
+
+  </form>
+
+  <!-- Submit the Form to Google Using "AJAX" -->
+  <script data-cfasync="false" type="text/javascript"
+  src="form-submission-handler.js"></script>
+<!-- END -->
+
+</body>
 </html>
